# waooaw-platform

./: .copilotignore  .editorconfig  .env.example  .gitignore  .sqlfluff  ARCHITECTURE.md  BOOTSTRAP.md  CHANGELOG.md  CONSTITUTION.md  FOUNDER-ACTION.md  GENESIS.md  INSTITUTIONAL_BACKLOG.md  ORGANIZATION.md  PROJECT_STATE.md  README.md  RED_TEAM.md  WAOOAW_Hero_v08.html  WAOOAW_Landing_v10.html  WAOOAW_Landing_v11.html  commitlint.config.js  docker-compose.yml  pyproject.toml  requirements-test.txt
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.zap/: rules.tsv
adr/: ADR-001-grpc-for-constitutional-engine.md  ADR-002-openapi-spec-first.md  ADR-003-jwt-claims-multi-tenancy.md  ADR-004-emergency-stop-signalr.md  ADR-005-paas-session-isolation.md  ADR-006-api-rate-limiting.md  ADR-007-grpc-mtls-certificates.md  ADR-008-keycloak-identity-broker.md  ADR-009-opentelemetry-observability.md  ADR-010-cloud-provider-portability.md  ADR-011-database-migration-strategy.md  ADR-012-container-image-registry.md  ADR-013-cicd-pipeline-structure.md  ADR-014-secret-management.md  ADR-015-temporal-deployment-strategy.md  ADR-016-service-language-selection.md  ADR-017-web-application-framework.md  ADR-018-emergency-stop-temporal-signal.md  ADR-019-rag-architecture.md  ADR-020-mcp-integration-pattern.md  ADR-021-external-platform-oauth-token-management.md  ADR-022-payment-processing-razorpay-india.md  (+10 more)
src/ai-runtime/: AGENTS.md  Dockerfile  README.md  main.py  pyproject.toml
src/professional-runtime/: AGENTS.md  Dockerfile  README.md  main.py  pyproject.toml
(+403 files in other folders)
